# zamp-z1

./: .gitignore
source/: CMakeLists.txt  commands.txt  ctest.txt  scene.xml
source/headers/: ui.hpp
source/inc/: Cuboid.hh  DronPose.hh  DronePose.hh  Interface.hh  Interp4Command.hh  Visualization.hh  Wektor3D.hh  commandInterpreter.hh  io.hh  lacze_do_gnuplota.hh  pluginHandler.hh  scene.hh  visualizer.hh  xmlparser4scene.hh
source/plugin/: CMakeLists.txt  Makefile
source/plugin/inc/: Interp4Fly.hh  Interp4Rotate.hh  Interp4Scene.hh  Interp4Turn.hh
source/plugin/src/: Interp4Fly.cpp  Interp4Rotate.cpp  Interp4Scene.cpp  Interp4Turn.cpp
source/src/: Cuboid.cpp  DronePose.cpp  Interface.cpp  Interp4Command.cpp  Wektor3D.cpp  commandInterpreter.cpp  io.cpp  lacze_do_gnuplota.cpp  main.cpp  pluginHandler.cpp  scene.cpp  ui.cpp  visualizer.cpp  xmlparser4scene.cpp
wsp/: wsp_test.txt
zalazek_podstawowy/plugin/inc/: Interp4Fly.hh
